--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,8 +2,8 @@
 <html xmlns:wb="http://open.weibo.com/wb">
 <head>
   <meta charset="utf-8">
-  <title>Chu Yanshuo | 初砚硕</title>
-  <meta name="author" content="Chu Yanshuo | 初砚硕"/>
+  <title>Xu Yining</title>
+  <meta name="author" content="Xu Yining"/>
   <meta name="viewport" content="width=device-width; initial-scale=1.0">
   <link rel="stylesheet" type="text/css"
 media="screen and (min-width: 700px)"   href="/media/css/home.css"/>
@@ -38,15 +38,11 @@ media="screen and (max-width: 700px)"   href="/media/css/tinyhome.css"/>
 </head>
 <body>
   <div class="container">
-{% if page.avatar %} <p><img src="http://i.imgur.com/UR0F2VH.jpg" title="Chu Yanshuo"  /></p> {% endif %}
-<div class="headname"><li><h1 class="sitename">Chu Yanshuo 
+{% if page.avatar %} <p><img src="http://img2.3lian.com/2014/f5/158/d/86.jpg" title="Xu Yining"  /></p> {% endif %}
+<div class="headname"><li><h1 class="sitename">Xu Yining 
 </h1></li>
-<li><wb:follow-button uid="1641860010" type="red_1" width="67" height="24" ></wb:follow-button></li>
 </div>
 
-<!---
-<iframe width="136" height="24" frameborder="0" allowtransparency="true" marginwidth="0" marginheight="0" scrolling="no" border="0" src="http://widget.weibo.com/relationship/followbutton.php?language=zh_cn &uid=1641860010&style=1&btn=red&dpc=1"></iframe>
---->
 {{ content }}
 <center>
   <ul class="nav pills">
@@ -58,6 +54,5 @@ media="screen and (max-width: 700px)"   href="/media/css/tinyhome.css"/>
   <p><small>Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a> on GitHub |  <span class="label label-info">{{site.time | date:"%Y-%m-%d %H:%M:%S"}}</span></small></p>
 </footer>
 </div>
-<script type="text/javascript" src="http://tajs.qq.com/stats?sId=40045081" charset="UTF-8"></script> 
 </body>
 </html>
